test/expected/declare_fsti_v.out
declare f as function (x as static int)
                       ^
24: error: function parameters can not be "static"
